# loverooma

./: .env  404.html  Dockerfile  README.md  docker-compose-loverooma.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  utils.py
src/loverooma/: __init__.py  config.yaml  core.py  embedding_model.py  log.py  server.py
src/loverooma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_main.py
